# Kurs_82_n1

./: .coveragerc  .env  .env.exeple  README.md  config.py  main.py  musor.py  pyproject.toml
data/: operations.xls  operations_1.xls
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html
src/: reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py
