[project]
name = "kurs1-python-82"
version = "0.1.0"
description = ""
authors = [
    {name = "Андрей Гордиевский",email = "agwzdushaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "requests-html (>=0.10.0,<0.11.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (==1.2.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "yfinance (>=0.2.56,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
requests-mock = "^1.12.1"
coverage = "^7.8.0"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '\\.git'

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.poetry.scripts]
test-cov = "pytest --cov=my_package tests/ --cov-report=html"