[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kurs1-python-82"
version = "0.1.0"
description = ""
authors = ["Андрей Гордиевский <agwzdushaz@gmail.com>"]
readme = "README.md"
package-mode = false  # отключаем установку как пакет

[tool.poetry.dependencies]
python = ">=3.13"
requests = "^2.32.3"
requests-html = "^0.10.0"
openpyxl = "^3.1.5"
xlrd = "1.2.0"
dotenv = "^0.9.9"
yfinance = "^0.2.56"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
requests-mock = "^1.12.1"
coverage = "^7.8.0"
pytest = "^8.3.5"
pandas-stubs = "^2.2.3.250308"
types-requests = "^2.32.0.20250328"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 119
exclude = '\.git'

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.isort]
line_length = 119